--- a/common.html
+++ b/common.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div class="title">title에 들어가는 텍스트 사이즈입니다.</div>
-  <div class="card">소제목에 들어가는 텍스트 사이즈입니다.</div>
-  <div class="body">본문에 들어가는 텍스트 사이즈입니다.</div>
+  <h2 class="head1">title에 들어가는 텍스트 사이즈입니다.</h2>
+  <h2 class="head2">title에 들어가는 텍스트 사이즈입니다.</h2>
+  <h2 class="head3">title에 들어가는 텍스트 사이즈입니다.</h2>
+  <h3 class="body1">본문에 들어가는 텍스트 사이즈입니다.</h3>
+  <h3 class="body2">본문에 들어가는 텍스트 사이즈입니다.</h3>
+  <h3 class="body3">본문에 들어가는 텍스트 사이즈입니다.</h3>
 </body>
 </html>
