--- a/havehad.html
+++ b/havehad.html
@@ -14,29 +14,113 @@
     <main>
       <section class="intro_sec">
         <div class="intro_wrap">
-          <div class="intro_text">
-            <h2>바른 도시, 생활 복장</h2>
-            <p>havehad</p>
+          <div class="intro_top">
+            <p class="body3">UIUX DESIGN + WEB PUBLISHING / 적응형 웹 제작</p>
           </div>
-          <div class="intro_box">
-            <div class="intro_img img1">
-              <img src="assets/images/havehad/havehad_main_03.png" alt="인트로이미지">
+          <div class="intro_con">
+            <div class="intro_text">
+              <h2 class="body1">바른 도시, 생활 복장</h2>
+              <p class="head1">havehad</p>
+            </div>
+            <div class="intro_box">
+              <div class="intro_img img1">
+                <img src="assets/images/havehad/havehad_main_03.png" alt="인트로이미지">
+              </div>
+            </div>
+          </div>
+          <div class="intro_bottom">
+            <div class="bottom_text">
+              <p><strong>Duration </strong> 2025. 06. 10 - 2025. 06. 25</p>
+            </div>
+            <div class="bottom_text">
+              <p><strong>Tools </strong>figma, HTML5, CSS3, javascript, jQuery</p>
+            </div>
+            <div class="bottom_text">
+              <p><strong>Range </strong>Main page + 13 Sub pages</p>
             </div>
           </div>
         </div>
-        
       </section>
       <section class="overview_sec">
-  
+        <div class="overview_wrap">
+          <h2 class="body2">Overview</h2>
+          <h3 class="body1">Proper City Life City Wear,<br /> havehad</h3>
+          <p class="body3">뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳, 그렇기에 다양한 군집의 삶의 모습을 가진 곳. 도시 속에서의 다양한 사람과, 다양한 삶의 모습을 표현하고자 합니다. 입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶습니다.</p>
+        </div>
       </section>
       <section class="needs_sec">
-  
+        <div class="needs_wrap">
+          <div class="needs_text">
+            <h2 class="body2">Needs</h2>
+            <p class="body3">입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶다는 havehad의 목표에 맞게, 사용자로 하여금 보다 친숙하게, 접근하기 쉽게 제작하고자 하였습니다.</p>
+          </div>
+          <div class="needs_box">
+            <div class="need">
+              <p>접근하기쉬운</p>
+            </div>
+            <div class="need">
+              <p>단순하고 깔끔한 UI</p>
+            </div>
+            <div class="need">
+              <p>상품을 해치지 않는</p>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="goal_sec">
-  
+        <div class="goal_wrap">
+          <div class="goal_text">
+            <h2 class="body2">Project goal</h2>
+            <p class="body3">
+              havehad는 감각적인 스타일과 스토리를 지닌 의류 브랜드로, 모바일 어플을 통해 보다 직관적이고 감성적인 쇼핑 경험을 제공합니다. 고객이 브랜드의 철학을 자연스럽게 체험하고, 개인의 취향에 맞는 스타일을 손쉽게 발견하며, 일상 속에서 havehad만의 감성을 입을 수 있도록 하는 것이 우리의 목표입니다.
+            </p>
+          </div>
+          <div class="goal_box">
+            <div class="goal go1">미니멀</div>
+            <div class="goal go2">도시</div>
+            <div class="goal go3">모던</div>
+            <div class="goal go4">데일리 웨어</div>
+            <div class="goal go5">편안함</div>
+            <div class="goal go6">베이직</div>
+            <div class="goal go7">일상의 기록</div>
+            <div class="goal go8">빈티지무드</div>
+          </div>
+        </div>
       </section>
-      <section class="designSystem_sec">
-        
+      <section class="design_sec">
+        <div class="design_wrap">
+          <div class="color_sec">
+            <p class="body3">Design system</p>
+            <h2 class="head2">Color</h2>
+            <div class="color_box">
+              <div class="color">
+                <p>#333333</p>
+              </div>
+              <div class="color">
+                <p>#e8e8e8</p>
+              </div>
+              <div class="color">
+                <p>#0033ff</p>
+              </div>
+            </div>
+          </div>
+          <div class="typo_sec">
+            <p class="body3">Design system</p>
+            <h2 class="head2">Typography</h2>
+            <div class="typo_img">
+              <img src="assets/images/havehad/font.png" alt="폰트이미지">
+            </div>
+          </div>
+          <div class="info_sec">
+            <div class="info_wrap">
+              <p class="body3">Design system</p>
+              <h2 class="head2">정보구조도</h2>
+              <div class="info_img">
+                <img src="assets/images/havehad/info.png" alt="정보구조도이미지">
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
