--- a/havehad.html
+++ b/havehad.html
@@ -21,6 +21,10 @@
             <div class="intro_text">
               <h2 class="body1">바른 도시, 생활 복장</h2>
               <p class="head1">havehad</p>
+              <div class="intro_nav">
+                <a href="#">github</a>
+                <a href="#">go to site</a>
+              </div>
             </div>
             <div class="intro_box">
               <div class="intro_img img1">
@@ -41,14 +45,14 @@
           </div>
         </div>
       </section>
-      <section class="overview_sec">
+      <section class="overview_sec ani y_Bottom">
         <div class="overview_wrap">
           <h2 class="body2">Overview</h2>
           <h3 class="body1">Proper City Life City Wear,<br /> havehad</h3>
           <p class="body3">뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳, 그렇기에 다양한 군집의 삶의 모습을 가진 곳. 도시 속에서의 다양한 사람과, 다양한 삶의 모습을 표현하고자 합니다. 입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶습니다.</p>
         </div>
       </section>
-      <section class="needs_sec">
+      <section class="needs_sec ani y_Bottom">
         <div class="needs_wrap">
           <div class="needs_text">
             <h2 class="body2">Needs</h2>
@@ -67,7 +71,7 @@
           </div>
         </div>
       </section>
-      <section class="goal_sec">
+      <section class="goal_sec ani y_Bottom">
         <div class="goal_wrap">
           <div class="goal_text">
             <h2 class="body2">Project goal</h2>
@@ -87,7 +91,11 @@
           </div>
         </div>
       </section>
-      <section class="design_sec">
+      <section class="design_sec ani y_Bottom">
+        <div class="design_text">
+          <h2 class="body2">Design system</h2>
+          <p class="body3">사이트의 완성도 높은 아이덴티티 구축을 위해 디자인 시스템을 정의합니다.</p>
+        </div>
         <div class="design_wrap">
           <div class="color_sec">
             <p class="body3">Design system</p>
@@ -104,22 +112,33 @@
               </div>
             </div>
           </div>
-          <div class="typo_sec">
+          <div class="typo_sec ani y_Bottom">
             <p class="body3">Design system</p>
             <h2 class="head2">Typography</h2>
             <div class="typo_img">
               <img src="assets/images/havehad/font.png" alt="폰트이미지">
             </div>
           </div>
-          <div class="info_sec">
-            <div class="info_wrap">
-              <p class="body3">Design system</p>
-              <h2 class="head2">정보구조도</h2>
-              <div class="info_img">
-                <img src="assets/images/havehad/info.png" alt="정보구조도이미지">
-              </div>
-            </div>
-          </div>
+        </div>
+      </section>
+      <section class="main_sec ani y_Bottom">
+        <h2 class="head3">Mainpage</h2>
+        <div class="main_img">
+          <img src="assets/images/havehad/mainpage_01.png" alt="목업이미지">
+        </div>
+        <div class="main_text text1 ani y_Bottom delay04">
+          <h3 class="body1">Main</h3>
+          <p class="body3">제일 먼저 나오는 페이지입니다.<br> 상품의 이미지를 해치지 않도록 단순하고 깔끔한 UI로 제작했으며,<br> 제품의 이미지를 키워 사용자로 하여금 보다 자세히 볼 수 있도록 하였습니다.</p>
+        </div>
+      </section>
+      <section class="sub_sec ani y_Bottom">
+        <h2 class="head3">Subpage</h2>
+        <div class="sub_img">
+          <img src="assets/images/havehad/subpage_01.png" alt="목업이미지">
+        </div>
+        <div class="sub_text text1 ani y_Bottom delay04">
+          <h3 class="body1">Sub</h3>
+          <p class="body3">서브 페이지입니다.<br> 상품의 이미지를 해치지 않도록 단순하고 깔끔한 UI로 제작했으며,<br> 제품의 이미지를 키워 사용자로 하여금 보다 자세히 볼 수 있도록 하였습니다.</p>
         </div>
       </section>
     </main>
@@ -127,5 +146,8 @@
   
     </footer>
   </div>
+  <script src="assets/js/jquery-3.7.1.min.js"></script>
+  <script src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
+  <script src="assets/js/scroll.js"></script>
 </body>
 </html>
