havehad 뷰페이지수정

--- a/common.html
+++ b/common.html
@@ -13,5 +13,8 @@
   <h3 class="body1">본문에 들어가는 텍스트 사이즈입니다.</h3>
   <h3 class="body2">본문에 들어가는 텍스트 사이즈입니다.</h3>
   <h3 class="body3">본문에 들어가는 텍스트 사이즈입니다.</h3>
+
+  <a href="#" class="github">github</a>
+  <a href="#" class="site">go to site</a>
 </body>
 </html>
