--- a/havehad.html
+++ b/havehad.html
@@ -19,8 +19,8 @@
           </div>
           <div class="intro_con">
             <div class="intro_text">
-              <h2 class="body1">바른 도시, 생활 복장</h2>
-              <p class="head1">havehad</p>
+              <h2 class="body2">바른 도시, 생활 복장</h2>
+              <p class="head1">havehad.</p>
               <div class="intro_nav">
                 <a href="#">github</a>
                 <a href="#">go to site</a>
@@ -47,9 +47,16 @@
       </section>
       <section class="overview_sec ani y_Bottom">
         <div class="overview_wrap">
-          <h2 class="body2">Overview</h2>
-          <h3 class="body1">Proper City Life City Wear,<br /> havehad</h3>
-          <p class="body3">뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳, 그렇기에 다양한 군집의 삶의 모습을 가진 곳. 도시 속에서의 다양한 사람과, 다양한 삶의 모습을 표현하고자 합니다. 입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶습니다.</p>
+          <div class="overview_text">
+            <h2 class="body3">Overview</h2>
+            <h3 class="body1">Proper City Life City Wear,<br /> havehad</h3>
+            <p class="body3">
+              뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳,<br> 그렇기에 다양한 군집의 삶의 모습을 가진 곳. 도시 속에서의 다양한 사람과, 다양한 삶의 모습을 표현하고자 합니다. <br>입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶습니다.
+            </p>
+            <div class="overview_img">
+
+            </div>
+          </div>
         </div>
       </section>
       <section class="needs_sec ani y_Bottom">
@@ -143,7 +150,12 @@
       </section>
     </main>
     <footer>
-  
+      <div class="end_sec">
+        <div class="end_wrap">
+          <h2 class="body3">havehad 적응형웹 제작</h2>
+          <p class="body3">본 프로젝트는 포트폴리오용으로 제작된 것으로, 상업적 목적은 없습니다.</p>
+        </div>
+      </div>
     </footer>
   </div>
   <script src="assets/js/jquery-3.7.1.min.js"></script>
