--- a/moneffe.html
+++ b/moneffe.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>viewpage</title>
+  <title>viewpage>moneffe.</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div id="havehad">
+  <div id="moneffe">
     <header>
   
     </header>
@@ -15,12 +15,12 @@
       <section class="intro_sec">
         <div class="intro_wrap">
           <div class="intro_top">
-            <p class="body3">UIUX DESIGN + WEB PUBLISHING / 적응형 웹 제작</p>
+            <p class="body3">WEB PUBLISHING / Onepage 제작</p>
           </div>
           <div class="intro_con">
             <div class="intro_text">
-              <h2 class="body2">바른 도시, 생활 복장</h2>
-              <p class="head1">havehad.</p>
+              <h2 class="body2">향으로 완성되는 일상의 무드</h2>
+              <p class="head1">moneffe.</p>
               <div class="intro_nav">
                 <a href="#">github</a>
                 <a href="#">go to site</a>
@@ -51,9 +51,10 @@
             <h2 class="body3">Overview</h2>
             <h3 class="body1">Proper City Life City Wear,<br /> havehad</h3>
             <p class="body3">
-              뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳,<br /> 그렇기에 다양한 군집의 삶의 모습을 가진 곳. 도시 속에서의 다양한 사람과, 다양한 삶의 모습을 표현하고자 합니다. <br />입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶습니다.
+              뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳,<br> 그렇기에 다양한 군집의 삶의 모습을 가진 곳. 도시 속에서의 다양한 사람과, 다양한 삶의 모습을 표현하고자 합니다. <br>입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶습니다.
             </p>
             <div class="overview_img">
+
             </div>
           </div>
         </div>
