havehad 뷰페이지 수정

--- a/havehad.html
+++ b/havehad.html
@@ -20,7 +20,7 @@
           <div class="intro_con">
             <div class="intro_text">
               <h2 class="body2">바른 도시, 생활 복장</h2>
-              <p class="head1">havehad.</p>
+              <p class="title1">havehad.</p>
               <div class="intro_nav">
                 <a href="#">github</a>
                 <a href="#">go to site</a>
@@ -105,7 +105,7 @@
         <div class="design_wrap">
           <div class="color_sec">
             <p class="body3">Design system</p>
-            <h2 class="head2">Color</h2>
+            <h2 class="title3">Color</h2>
             <div class="color_box">
               <div class="color">
                 <p>#333333</p>
@@ -120,7 +120,7 @@
           </div>
           <div class="typo_sec ani y_Bottom">
             <p class="body3">Design system</p>
-            <h2 class="head2">Typography</h2>
+            <h2 class="title3">Typography</h2>
             <div class="typo_img">
               <img src="assets/images/havehad/font.png" alt="폰트이미지">
             </div>
@@ -128,7 +128,7 @@
         </div>
       </section>
       <section class="main_sec ani y_Bottom">
-        <h2 class="head3">Mainpage</h2>
+        <h2 class="title3">Mainpage</h2>
         <div class="main_img">
           <img src="assets/images/havehad/mainpage_01.png" alt="목업이미지">
         </div>
@@ -138,7 +138,7 @@
         </div>
       </section>
       <section class="sub_sec ani y_Bottom">
-        <h2 class="head3">Subpage</h2>
+        <h2 class="title3">Subpage</h2>
         <div class="sub_img">
           <img src="assets/images/havehad/subpage_01.png" alt="목업이미지">
         </div>
