moneffe 페이지 시작

--- a/moneffe.html
+++ b/moneffe.html
@@ -20,7 +20,7 @@
           <div class="intro_con">
             <div class="intro_text">
               <h2 class="body2">향으로 완성되는 일상의 무드</h2>
-              <p class="head1">moneffe.</p>
+              <p class="title1">moneffe.</p>
               <div class="intro_nav">
                 <a href="#">github</a>
                 <a href="#">go to site</a>
@@ -49,12 +49,11 @@
         <div class="overview_wrap">
           <div class="overview_text">
             <h2 class="body3">Overview</h2>
-            <h3 class="body1">Proper City Life City Wear,<br /> havehad</h3>
+            <h3 class="body1">Ritual Fragrancs</h3>
             <p class="body3">
-              뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳,<br> 그렇기에 다양한 군집의 삶의 모습을 가진 곳. 도시 속에서의 다양한 사람과, 다양한 삶의 모습을 표현하고자 합니다. <br>입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶습니다.
+              뚜렷하지 않은 색채들이 모여 뚜렷한 이미지를 만드는 곳,<br>감각적인 향과 디자인, 일상에 작은 의식을 선물하고 싶습니다.
             </p>
             <div class="overview_img">
-
             </div>
           </div>
         </div>
@@ -63,17 +62,17 @@
         <div class="needs_wrap">
           <div class="needs_text">
             <h2 class="body2">Needs</h2>
-            <p class="body3">입는 역할의 ‘옷’을 넘어, 도시를 거치는 '우리'의 그런 생활 방식을 표현하고 싶다는 havehad의 목표에 맞게, 사용자로 하여금 보다 친숙하게, 접근하기 쉽게 제작하고자 하였습니다.</p>
+            <p class="body3">감각적인 향과 디자인, 미니멀 라이프와 디퓨저를 단순한 방향제가 아닌 감성적인 루틴 아이템을 추구하는 moneffe에 맞게<br /> 모던한 분위기와 제품을 해치지 않도록 디자인 했습니다.</p>
           </div>
           <div class="needs_box">
             <div class="need">
-              <p>접근하기쉬운</p>
+              <p>모던, 감성 미니멀 디자인</p>
             </div>
             <div class="need">
-              <p>단순하고 깔끔한 UI</p>
+              <p>제품을 해치지 않는</p>
             </div>
             <div class="need">
-              <p>상품을 해치지 않는</p>
+              <p>브랜드의 철학이 드러나는</p>
             </div>
           </div>
         </div>
@@ -85,16 +84,6 @@
             <p class="body3">
               havehad는 감각적인 스타일과 스토리를 지닌 의류 브랜드로, 모바일 어플을 통해 보다 직관적이고 감성적인 쇼핑 경험을 제공합니다. 고객이 브랜드의 철학을 자연스럽게 체험하고, 개인의 취향에 맞는 스타일을 손쉽게 발견하며, 일상 속에서 havehad만의 감성을 입을 수 있도록 하는 것이 우리의 목표입니다.
             </p>
-          </div>
-          <div class="goal_box">
-            <div class="goal go1">미니멀</div>
-            <div class="goal go2">도시</div>
-            <div class="goal go3">모던</div>
-            <div class="goal go4">데일리 웨어</div>
-            <div class="goal go5">편안함</div>
-            <div class="goal go6">베이직</div>
-            <div class="goal go7">일상의 기록</div>
-            <div class="goal go8">빈티지무드</div>
           </div>
         </div>
       </section>
