--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 
   </header>
   <main>
-    <svg xmlns="http://www.w3.org/2000/svg" id="svg" version="1.1" width="100%" height="100%" viewBox="0 0 500 500"></svg>
+    <div id="leaves">
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i>
+      <i></i> 
+    </div>
   </main>
   <footer>
     
