--- a/index.html
+++ b/index.html
@@ -8,30 +8,67 @@
 </head>
 <body>
   <header>
-
+    <div class="header_sec">
+      <div class="header_time">
+        <div id="clock">time</div>
+      </div>
+      <div class="nav">
+        <ul class="util_menu">
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">PROJECT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
   </header>
   <main>
-    <div id="leaves">
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i>
-      <i></i> 
-    </div>
+    <section class="main_sec">
+      <div class="main_text">
+        <div class="text">
+          <span>THROUGHFUL</span>
+          <div class="img">
+            <video src="assets/images/index/sky.mp4" autoplay="autoplay" muted="muted" loop>
+            </video>
+          </div>
+          <span>DESIGN</span>
+        </div>
+        <div class="text">
+          <span>RESPONSIVE</span>
+          <div class="img">
+            <img src="assets/images/index/Union.svg" alt="">
+          </div>
+          <span>BUILD</span>
+        </div>
+        <div class="text">
+          <div class="img">
+            <video src="assets/images/index/flower.mp4" autoplay="autoplay" muted="muted" loop>
+            </video>
+          </div>
+          <span>CLEAR</span>
+          <span>PROCESS</span>
+        </div>
+      </div>
+    </section>
+    
   </main>
   <footer>
-    
+    <section class="footer_sec">
+      <div class="footer_left">
+        <h2>UIUX DESIGN</h2>
+        <h2>WEB PUBLISHING</h2>
+      </div>
+      <div class="footer_right">
+        <h2>PORTFOLIO</h2>
+        <h2>2025. 07. 02</h2>
+      </div>
+    </section>
   </footer>
+  <script src="assets/js/jquery-3.7.1.min.js"></script>
+  <script src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
+  <script src="assets/js/scroll.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
