--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <div class="header_sec">
-      <div class="header_time">
-        <div id="clock">time</div>
+      <div class="header_logo">
+        <h2>PARK JEONG WOO</h2>
       </div>
       <div class="nav">
         <ul class="util_menu">
@@ -25,37 +25,147 @@
     <section class="main_sec">
       <div class="main_text">
         <div class="text">
-          <span>THROUGHFUL</span>
+          <span>DE</span>
           <div class="img">
             <video src="assets/images/index/sky.mp4" autoplay="autoplay" muted="muted" loop>
             </video>
           </div>
-          <span>DESIGN</span>
+          <span>SIGN</span>
         </div>
         <div class="text">
-          <span>RESPONSIVE</span>
+          <span>RES</span>
           <div class="img">
             <img src="assets/images/index/Union.svg" alt="">
           </div>
-          <span>BUILD</span>
+          <span>PONSIVE</span>
         </div>
         <div class="text">
           <div class="img">
             <video src="assets/images/index/flower.mp4" autoplay="autoplay" muted="muted" loop>
             </video>
           </div>
-          <span>CLEAR</span>
           <span>PROCESS</span>
         </div>
       </div>
     </section>
-    
+    <section class="about_sec">
+      <div class="about_wrap">
+        <div class="profile">
+
+        </div>
+        <div class="about_text">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam consequuntur aliquam repellat maiores dolorem! Modi ab nostrum obcaecati qui corrupti?</p>
+        </div>
+      </div>
+      
+    </section>
+    <section class="project_sec">
+      <div class="project_wrap">
+        <div class="project_title">
+          <div class="project_text">
+            <h2>PORTFOLIO</h2>
+          </div>
+        </div>
+        <div class="project_box">
+          <a class="gallery" href="#">
+            <img src="assets/images/index/moneffe_bg.png" alt="">
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem, ipsum dolor.</p>
+          </a>
+          <a class="gallery" href="#">
+            <img src="assets/images/index/moneffe_bg.png" alt="">
+          </a>
+          <a class="gallery" href="#">
+            <img src="assets/images/index/moneffe_bg.png" alt="">
+          </a>
+          <a class="gallery" href="#">
+            <img src="assets/images/index/moneffe_bg.png" alt="">
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="list_sec">
+      <div class="title">
+        <h2>PORTFOLIO</h2>
+      </div>
+      <div class="list_wrap">
+        <a href="#" class="list">
+          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
+          <h3>moneffe</h3>
+          <p class="tag">
+            <span>#웹퍼블리싱 100%</span>
+            <span>#적응형</span>
+            <span>#HTML</span>
+            <span>#CSS</span>
+          </p>
+          <p class="year">2025</p>
+        </a>
+        <a href="#" class="list">
+          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
+          <h3>moneffe</h3>
+          <p class="tag">
+            <span>#웹퍼블리싱 100%</span>
+            <span>#적응형</span>
+            <span>#HTML</span>
+            <span>#CSS</span>
+          </p>
+          <p class="year">2025</p>
+        </a>
+        <a href="#" class="list">
+          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
+          <h3>moneffe</h3>
+          <p class="tag">
+            <span>#웹퍼블리싱 100%</span>
+            <span>#적응형</span>
+            <span>#HTML</span>
+            <span>#CSS</span>
+          </p>
+          <p class="year">2025</p>
+        </a>
+        <a href="#" class="list">
+          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
+          <h3>moneffe</h3>
+          <p class="tag">
+            <span>#웹퍼블리싱 100%</span>
+            <span>#적응형</span>
+            <span>#HTML</span>
+            <span>#CSS</span>
+          </p>
+          <p class="year">2025</p>
+        </a>
+        <a href="#" class="list">
+          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
+          <h3>moneffe</h3>
+          <p class="tag">
+            <span>#웹퍼블리싱 100%</span>
+            <span>#적응형</span>
+            <span>#HTML</span>
+            <span>#CSS</span>
+          </p>
+          <p class="year">2025</p>
+        </a>
+        <a href="#" class="list">
+          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
+          <h3>moneffe</h3>
+          <p class="tag">
+            <span>#웹퍼블리싱 100%</span>
+            <span>#적응형</span>
+            <span>#HTML</span>
+            <span>#CSS</span>
+          </p>
+          <p class="year">2025</p>
+        </a>
+      </div>
+    </section>
+    <section class="contact_sec">
+
+    </section>
   </main>
   <footer>
     <section class="footer_sec">
       <div class="footer_left">
-        <h2>UIUX DESIGN</h2>
-        <h2>WEB PUBLISHING</h2>
+        <div id="clock">time</div>
       </div>
       <div class="footer_right">
         <h2>PORTFOLIO</h2>
