project 반응형 추가

--- a/index.html
+++ b/index.html
@@ -65,22 +65,62 @@
         <div class="project_title">
           <div class="project_text">
             <h2>PORTFOLIO</h2>
+            <p>사용자 경험을 최우선으로 생각하며, <strong>웹 표준과 반응형 구현</strong>에 집중합니다.<br> 꾸준한 학습과 꼼꼼한 마크업으로 <strong>디자인을 실제 화면에 구현</strong>하는 데 열정을 가지고 있습니다. 사용자가 편하게 머무를 수 있는 웹사이트를 만들기 위해 항상 고민하고 성장합니다.</p>
           </div>
         </div>
         <div class="project_box">
           <a class="gallery" href="#">
             <img src="assets/images/index/moneffe_bg.png" alt="">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-            <p>Lorem, ipsum dolor.</p>
+            <div class="gallery_text">
+              <h3>OPS 베이커리 리뉴얼</h3>
+              <p class="gallery_tag">
+                <span>#웹퍼블리싱</span>
+                <span>#적응형</span>
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#jQuery</span>
+              </p>
+            </div>
           </a>
           <a class="gallery" href="#">
             <img src="assets/images/index/moneffe_bg.png" alt="">
+            <div class="gallery_text">
+              <h3>국립현대미술관 리뉴얼</h3>
+              <p class="gallery_tag">
+                <span>#웹퍼블리싱</span>
+                <span>#반응형</span>
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#javascript</span>
+                <span>#jQuery</span>
+              </p>
+            </div>
           </a>
           <a class="gallery" href="#">
             <img src="assets/images/index/moneffe_bg.png" alt="">
+            <div class="gallery_text">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p class="gallery_tag">
+                <span>#웹퍼블리싱</span>
+                <span>#반응형</span>
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#jQuery</span>
+              </p>
+            </div>
           </a>
           <a class="gallery" href="#">
             <img src="assets/images/index/moneffe_bg.png" alt="">
+            <div class="gallery_text">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p class="gallery_tag">
+                <span>#웹퍼블리싱</span>
+                <span>#반응형</span>
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#jQuery</span>
+              </p>
+            </div>
           </a>
         </div>
       </div>
@@ -90,28 +130,6 @@
         <h2>PORTFOLIO</h2>
       </div>
       <div class="list_wrap">
-        <a href="#" class="list">
-          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
-          <h3>moneffe</h3>
-          <p class="tag">
-            <span>#웹퍼블리싱 100%</span>
-            <span>#적응형</span>
-            <span>#HTML</span>
-            <span>#CSS</span>
-          </p>
-          <p class="year">2025</p>
-        </a>
-        <a href="#" class="list">
-          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
-          <h3>moneffe</h3>
-          <p class="tag">
-            <span>#웹퍼블리싱 100%</span>
-            <span>#적응형</span>
-            <span>#HTML</span>
-            <span>#CSS</span>
-          </p>
-          <p class="year">2025</p>
-        </a>
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
           <h3>moneffe</h3>
