0704 4일차 코딩 완료

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>포트폴리오</title>
+  <title>PJW</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -15,9 +15,12 @@
       <div class="nav">
         <ul class="util_menu">
           <li><a href="#">ABOUT</a></li>
-          <li><a href="#">PROJECT</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
+      </div>
+      <div class="header_time">
+        <div id="clock">time</div>
       </div>
     </div>
   </header>
@@ -65,12 +68,12 @@
         <div class="project_title">
           <div class="project_text">
             <h2>PORTFOLIO</h2>
-            <p>사용자 경험을 최우선으로 생각하며, <strong>웹 표준과 반응형 구현</strong>에 집중합니다.<br> 꾸준한 학습과 꼼꼼한 마크업으로 <strong>디자인을 실제 화면에 구현</strong>하는 데 열정을 가지고 있습니다. 사용자가 편하게 머무를 수 있는 웹사이트를 만들기 위해 항상 고민하고 성장합니다.</p>
+            <p>사용자 경험을 최우선으로 생각하며, 웹 표준과 반응형 구현에 집중합니다. 꾸준한 학습과 꼼꼼한 마크업으로 디자인을 실제 화면에 구현하는 데 열정을 가지고 있습니다. 사용자가 편하게 머무를 수 있는 웹사이트를 만들기 위해 항상 고민하고 성장합니다.</p>
           </div>
         </div>
         <div class="project_box">
           <a class="gallery" href="#">
-            <img src="assets/images/index/moneffe_bg.png" alt="">
+            <img src="assets/images/index/moneffe_bg.png" alt="OPS 베이커리">
             <div class="gallery_text">
               <h3>OPS 베이커리 리뉴얼</h3>
               <p class="gallery_tag">
@@ -83,7 +86,7 @@
             </div>
           </a>
           <a class="gallery" href="#">
-            <img src="assets/images/index/moneffe_bg.png" alt="">
+            <img src="assets/images/index/moneffe_bg.png" alt="국립현대미술관">
             <div class="gallery_text">
               <h3>국립현대미술관 리뉴얼</h3>
               <p class="gallery_tag">
@@ -97,14 +100,15 @@
             </div>
           </a>
           <a class="gallery" href="#">
-            <img src="assets/images/index/moneffe_bg.png" alt="">
+            <img src="assets/images/index/havehad_bg.png" alt="해브해드">
             <div class="gallery_text">
-              <h3>Lorem ipsum dolor sit amet.</h3>
+              <h3>havehad 모바일웹 제작</h3>
               <p class="gallery_tag">
                 <span>#웹퍼블리싱</span>
-                <span>#반응형</span>
+                <span>#적응형</span>
                 <span>#HTML</span>
                 <span>#CSS</span>
+                <span>#javascript</span>
                 <span>#jQuery</span>
               </p>
             </div>
@@ -131,7 +135,7 @@
       </div>
       <div class="list_wrap">
         <a href="#" class="list">
-          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
+          <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
           <h3>moneffe</h3>
           <p class="tag">
             <span>#웹퍼블리싱 100%</span>
@@ -142,53 +146,57 @@
           <p class="year">2025</p>
         </a>
         <a href="#" class="list">
-          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
-          <h3>moneffe</h3>
+          <img class="fade" src="assets/images/index/siff_logo.png" alt="서울독립영화제">
+          <h3>서울 독립 영화제</h3>
           <p class="tag">
             <span>#웹퍼블리싱 100%</span>
             <span>#적응형</span>
+            <span>#HTML</span>
+            <span>#CSS</span>
+            <span>#jQuery</span>
+          </p>
+          <p class="year">2025</p>
+        </a>
+        <a href="#" class="list">
+          <img class="fade" src="assets/images/index/chuck_logo.png" alt="서울척병원">
+          <h3>서울 척병원</h3>
+          <p class="tag">
+            <span>#웹퍼블리싱 100%</span>
+            <span>#반응형</span>
             <span>#HTML</span>
             <span>#CSS</span>
           </p>
           <p class="year">2025</p>
         </a>
         <a href="#" class="list">
-          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
-          <h3>moneffe</h3>
+          <img class="fade" src="assets/images/index/audi_logo.png" alt="아우디">
+          <h3>Audi</h3>
           <p class="tag">
             <span>#웹퍼블리싱 100%</span>
             <span>#적응형</span>
             <span>#HTML</span>
             <span>#CSS</span>
-          </p>
-          <p class="year">2025</p>
-        </a>
-        <a href="#" class="list">
-          <img class="fade" src="assets/images/index/moneffe_bg.png" alt="">
-          <h3>moneffe</h3>
-          <p class="tag">
-            <span>#웹퍼블리싱 100%</span>
-            <span>#적응형</span>
-            <span>#HTML</span>
-            <span>#CSS</span>
+            <span>#Bootstrap</span>
           </p>
           <p class="year">2025</p>
         </a>
       </div>
     </section>
-    <section class="contact_sec">
+    <section class="graphic_sec">
 
+    </section>
+    <section class="contact_sec">
+      <div class="contact_wrap">
+        <div class="contact_title">
+          <h2>Contact</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Beatae, quasi.</p>
+        </div>
+      </div>
     </section>
   </main>
   <footer>
     <section class="footer_sec">
-      <div class="footer_left">
-        <div id="clock">time</div>
-      </div>
-      <div class="footer_right">
-        <h2>PORTFOLIO</h2>
-        <h2>2025. 07. 02</h2>
-      </div>
+      
     </section>
   </footer>
   <script src="assets/js/jquery-3.7.1.min.js"></script>
