--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PJW</title>
+  <title>Jeongwoo's Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -28,37 +28,37 @@
     <section class="main_sec">
       <div class="main_text">
         <div class="text">
-          <span>DE</span>
+          <span>HE</span>
           <div class="img">
             <video src="assets/images/index/sky.mp4" autoplay="autoplay" muted="muted" loop>
             </video>
           </div>
-          <span>SIGN</span>
+          <span>LLO :) </span>
         </div>
         <div class="text">
-          <span>RES</span>
+          <span>WEL</span>
           <div class="img">
             <img src="assets/images/index/Union.svg" alt="">
           </div>
-          <span>PONSIVE</span>
+          <span>COME</span>
         </div>
         <div class="text">
           <div class="img">
             <video src="assets/images/index/flower.mp4" autoplay="autoplay" muted="muted" loop>
             </video>
           </div>
-          <span>PROCESS</span>
+          <span>PORTFOLIO</span>
         </div>
       </div>
     </section>
-    <section class="about_sec">
+    <section class="about_sec ani y_Bottom delay02">
       <div class="about_wrap">
-        <div class="profile">
-
+        <div class="profile_img">
+          <img src="assets/images/index/profile_bg.gif" alt="프로필이미지">
         </div>
         <div class="about_text">
-          <h2>Lorem ipsum dolor sit amet.</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam consequuntur aliquam repellat maiores dolorem! Modi ab nostrum obcaecati qui corrupti?</p>
+          <h2>ABOUT</h2>
+          <p>사용자 경험을 생각하며 디자인하고, 웹 표준과 접근성을 고려한 퍼블리싱으로 구현합니다.<br> 디자인과 개발 사이를 연결하는 역할에 가치를 두고 성장하고 있습니다.</p>
         </div>
       </div>
       
@@ -73,7 +73,7 @@
         </div>
         <div class="project_box">
           <a class="gallery" href="#">
-            <img src="assets/images/index/moneffe_bg.png" alt="OPS 베이커리">
+            <img src="assets/images/index/ops_bg.png" alt="OPS 베이커리">
             <div class="gallery_text">
               <h3>OPS 베이커리 리뉴얼</h3>
               <p class="gallery_tag">
@@ -138,47 +138,39 @@
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
           <h3>moneffe</h3>
           <p class="tag">
-            <span>#웹퍼블리싱 100%</span>
             <span>#적응형</span>
             <span>#HTML</span>
             <span>#CSS</span>
           </p>
-          <p class="year">2025</p>
         </a>
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/siff_logo.png" alt="서울독립영화제">
           <h3>서울 독립 영화제</h3>
           <p class="tag">
-            <span>#웹퍼블리싱 100%</span>
             <span>#적응형</span>
             <span>#HTML</span>
             <span>#CSS</span>
             <span>#jQuery</span>
           </p>
-          <p class="year">2025</p>
         </a>
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/chuck_logo.png" alt="서울척병원">
-          <h3>서울 척병원</h3>
+          <h3>서울척병원</h3>
           <p class="tag">
-            <span>#웹퍼블리싱 100%</span>
             <span>#반응형</span>
             <span>#HTML</span>
             <span>#CSS</span>
           </p>
-          <p class="year">2025</p>
         </a>
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/audi_logo.png" alt="아우디">
           <h3>Audi</h3>
           <p class="tag">
-            <span>#웹퍼블리싱 100%</span>
             <span>#적응형</span>
             <span>#HTML</span>
             <span>#CSS</span>
             <span>#Bootstrap</span>
           </p>
-          <p class="year">2025</p>
         </a>
       </div>
     </section>
