--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
     <section class="contact_sec">
       <div class="contact_wrap">
         <div class="contact_title">
-          <h2>Contact</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Beatae, quasi.</p>
+          <h2>CONTACT</h2>
+          <p>함께 일할 사람을 찾고 계신가요?</p>
+          <h3>parkjeongwoo970625@gmail.com</h3>
         </div>
       </div>
     </section>
