--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
-      <div class="header_time">
-        <div id="clock">time</div>
-      </div>
     </div>
   </header>
   <main>
@@ -30,7 +27,7 @@
         <div class="text">
           <span>HE</span>
           <div class="img">
-            <video src="assets/images/index/sky.mp4" autoplay="autoplay" muted="muted" loop>
+            <video src="assets/images/index/mmca_media.mp4" autoplay="autoplay" muted="muted" loop>
             </video>
           </div>
           <span>LLO :) </span>
@@ -38,101 +35,131 @@
         <div class="text">
           <span>WEL</span>
           <div class="img">
-            <img src="assets/images/index/Union.svg" alt="">
           </div>
           <span>COME</span>
         </div>
         <div class="text">
           <div class="img">
-            <video src="assets/images/index/flower.mp4" autoplay="autoplay" muted="muted" loop>
             </video>
           </div>
           <span>PORTFOLIO</span>
         </div>
       </div>
-    </section>
-    <section class="about_sec ani y_Bottom delay02">
-      <div class="about_wrap">
-        <div class="profile_img">
-          <img src="assets/images/index/profile_bg.gif" alt="프로필이미지">
-        </div>
-        <div class="about_text">
-          <h2>ABOUT</h2>
-          <p>사용자 경험을 생각하며 디자인하고, 웹 표준과 접근성을 고려한 퍼블리싱으로 구현합니다.<br> 디자인과 개발 사이를 연결하는 역할에 가치를 두고 성장하고 있습니다.</p>
-        </div>
+      <div class="lense">
+          <div class="tl"></div>
+          <div class="tr"></div>
+          <div class="bl"></div>
+          <div class="br"></div>
       </div>
-      
+      <div class="time">
+        <div id="clock">time</div>
+        <h2>2025. 07. 06</h2>
+      </div>
     </section>
-    <section class="project_sec">
-      <div class="project_wrap">
-        <div class="project_title">
-          <div class="project_text">
-            <h2>PORTFOLIO</h2>
-            <p>사용자 경험을 최우선으로 생각하며, 웹 표준과 반응형 구현에 집중합니다. 꾸준한 학습과 꼼꼼한 마크업으로 디자인을 실제 화면에 구현하는 데 열정을 가지고 있습니다. 사용자가 편하게 머무를 수 있는 웹사이트를 만들기 위해 항상 고민하고 성장합니다.</p>
+    <section class="about_sec">
+      <div class="about_wrap">
+        <div class="section catories_container">
+          <div class="container is_categories">
+            <div class="categories">
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">BOOTSTRAP</p>
+              </a>
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">CSS</p>
+              </a>
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">SCSS</p>
+              </a>
+            </div>
+          </div>
+          <div class="container is_categories">
+            <div class="categories">
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">WEBPUBLISHING</p>
+              </a>
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">HTML</p>
+              </a>
+            </div>
+          </div>
+          <div class="container is_categories">
+            <div class="categories">
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">UIUX</p>
+              </a>
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">HTML</p>
+              </a>
+              <a href="#" class="categories_link w-inline-block">
+                <div class="categories_border"></div>
+                <p class="categories_link-text">JAVASCRIPT</p>
+              </a>
+            </div>
           </div>
         </div>
+        <div class="about_title">
+          <h2>about</h2>
+          <h3>사용자의 시선을 정확히 포착하는 퍼블리셔</h3>
+          <p>
+            HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다. 마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="project_sec">
+      <div class="sec project01">
         <div class="project_box">
-          <a class="gallery" href="#">
-            <img src="assets/images/index/ops_bg.png" alt="OPS 베이커리">
-            <div class="gallery_text">
-              <h3>OPS 베이커리 리뉴얼</h3>
-              <p class="gallery_tag">
-                <span>#웹퍼블리싱</span>
-                <span>#적응형</span>
-                <span>#HTML</span>
-                <span>#CSS</span>
-                <span>#jQuery</span>
-              </p>
-            </div>
-          </a>
-          <a class="gallery" href="#">
-            <img src="assets/images/index/mmca_bg.png" alt="국립현대미술관">
-            <div class="gallery_text">
-              <h3>국립현대미술관 리뉴얼</h3>
-              <p class="gallery_tag">
-                <span>#웹퍼블리싱</span>
-                <span>#반응형</span>
-                <span>#HTML</span>
-                <span>#CSS</span>
-                <span>#javascript</span>
-                <span>#jQuery</span>
-              </p>
-            </div>
-          </a>
-          <a class="gallery" href="#">
-            <img src="assets/images/index/havehad_bg.png" alt="해브해드">
-            <div class="gallery_text">
-              <h3>havehad 모바일웹 제작</h3>
-              <p class="gallery_tag">
-                <span>#웹퍼블리싱</span>
-                <span>#적응형</span>
-                <span>#HTML</span>
-                <span>#CSS</span>
-                <span>#javascript</span>
-                <span>#jQuery</span>
-              </p>
-            </div>
-          </a>
-          <a class="gallery" href="#">
-            <img src="assets/images/index/moneffe_bg.png" alt="">
-            <div class="gallery_text">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p class="gallery_tag">
-                <span>#웹퍼블리싱</span>
-                <span>#반응형</span>
-                <span>#HTML</span>
-                <span>#CSS</span>
-                <span>#jQuery</span>
-              </p>
-            </div>
-          </a>
+          <video src="assets/images/index/ops_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <div class="project_title">
+            <h2>OPS</h2>
+            <p>
+              <span>#적응형</span>
+              <span>#HTML</span>
+              <span>#CSS</span>
+              <span>#jQuery</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="sec project02">
+        <div class="project_box">
+          <video src="assets/images/index/havehad_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <div class="project_title">
+            <h2>Havehad</h2>
+            <p>
+              <span>#적응형</span>
+              <span>#HTML</span>
+              <span>#CSS</span>
+              <span>#javascript</span>
+              <span>#jQuery</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="sec project03">
+        <div class="project_box">
+          <video src="assets/images/index/mmca_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <div class="project_title">
+            <h2>MMCA</h2>
+            <p>
+              <span>#반응형</span>
+              <span>#HTML</span>
+              <span>#CSS</span>
+              <span>#javascript</span>
+              <span>#jQuery</span>
+            </p>
+          </div>
         </div>
       </div>
     </section>
     <section class="list_sec">
-      <div class="title">
-        <h2>PORTFOLIO</h2>
-      </div>
       <div class="list_wrap">
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
@@ -194,10 +221,13 @@
   </footer>
   <script src="assets/js/jquery-3.7.1.min.js"></script>
   <script src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
-  <script src="assets/js/scroll.js"></script>
+  <script src="plugin/scrolla.jquery.min.js"></script>
+  <script src="plugin/splitting.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script>
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
+  <script src="assets/js/scroll.js"></script>
   <script src="assets/js/index.js"></script>
+  
 </body>
 </html>
