--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
       <div class="main_text">
         <div class="text">
           <span>HE</span>
-          <div class="img">
-            <video src="assets/images/index/mmca_media.mp4" autoplay="autoplay" muted="muted" loop>
-            </video>
-          </div>
           <span>LLO :) </span>
         </div>
         <div class="text">
@@ -58,54 +54,8 @@
     </section>
     <section class="about_sec">
       <div class="about_wrap">
-        <div class="section catories_container">
-          <div class="container is_categories">
-            <div class="categories">
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">BOOTSTRAP</p>
-              </a>
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">CSS</p>
-              </a>
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">SCSS</p>
-              </a>
-            </div>
-          </div>
-          <div class="container is_categories">
-            <div class="categories">
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">WEBPUBLISHING</p>
-              </a>
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">HTML</p>
-              </a>
-            </div>
-          </div>
-          <div class="container is_categories">
-            <div class="categories">
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">UIUX</p>
-              </a>
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">HTML</p>
-              </a>
-              <a href="#" class="categories_link w-inline-block">
-                <div class="categories_border"></div>
-                <p class="categories_link-text">JAVASCRIPT</p>
-              </a>
-            </div>
-          </div>
-        </div>
         <div class="about_title">
-          <h2>about</h2>
+          <h2>ABOUT</h2>
           <h3>사용자의 시선을 정확히 포착하는 퍼블리셔</h3>
           <p>
             HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다. 마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
@@ -159,7 +109,7 @@
         </div>
       </div>
     </section>
-    <section class="list_sec">
+    <!-- <section class="list_sec">
       <div class="list_wrap">
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
@@ -200,10 +150,8 @@
           </p>
         </a>
       </div>
-    </section>
-    <section class="graphic_sec">
+    </section> -->
 
-    </section>
     <section class="contact_sec">
       <div class="contact_wrap">
         <div class="contact_title">
