--- a/index.html
+++ b/index.html
@@ -25,20 +25,13 @@
     <section class="main_sec">
       <div class="main_text">
         <div class="text">
-          <span>HE</span>
-          <span>LLO :) </span>
+          <span>FRAMED</span>
         </div>
         <div class="text">
-          <span>WEL</span>
-          <div class="img">
-          </div>
-          <span>COME</span>
+          <span>IN</span>
         </div>
         <div class="text">
-          <div class="img">
-            </video>
-          </div>
-          <span>PORTFOLIO</span>
+          <span>CODE</span>
         </div>
       </div>
       <div class="lense">
@@ -109,7 +102,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="list_sec">
+    <section class="list_sec">
       <div class="list_wrap">
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
@@ -150,14 +143,13 @@
           </p>
         </a>
       </div>
-    </section> -->
+    </section>
 
     <section class="contact_sec">
       <div class="contact_wrap">
         <div class="contact_title">
           <h2>CONTACT</h2>
           <p>함께 일할 사람을 찾고 계신가요?</p>
-          <h3>parkjeongwoo970625@gmail.com</h3>
         </div>
       </div>
     </section>
