0707 time 위치 수정

--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
       <div class="header_logo">
         <h2>PARK JEONG WOO</h2>
       </div>
-      <div class="nav">
-        <ul class="util_menu">
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">PORTFOLIO</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </div>
     </div>
   </header>
   <main>
@@ -34,6 +27,13 @@
           <span>CODE</span>
         </div>
       </div>
+      <div class="nav">
+        <ul class="util_menu">
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
       <div class="lense">
           <div class="tl"></div>
           <div class="tr"></div>
@@ -42,7 +42,6 @@
       </div>
       <div class="time">
         <div id="clock">time</div>
-        <h2>2025. 07. 06</h2>
       </div>
     </section>
     <section class="about_sec">
@@ -51,7 +50,7 @@
           <h2>ABOUT</h2>
           <h3>사용자의 시선을 정확히 포착하는 퍼블리셔</h3>
           <p>
-            HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다. 마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
+            HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다.<br>마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
           </p>
         </div>
       </div>
@@ -104,6 +103,9 @@
     </section>
     <section class="list_sec">
       <div class="list_wrap">
+        <div class="list_title">
+          <h2>PROJECT</h2>
+        </div>
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
           <h3>moneffe</h3>
@@ -144,7 +146,6 @@
         </a>
       </div>
     </section>
-
     <section class="contact_sec">
       <div class="contact_wrap">
         <div class="contact_title">
