--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="clock">time</div>
       </div>
     </section>
-    <section class="about_sec">
+    <section class="about_sec ani y_Bottom delay05">
       <div class="about_wrap">
         <div class="about_title">
           <h2>ABOUT</h2>
@@ -67,6 +67,10 @@
               <span>#CSS</span>
               <span>#jQuery</span>
             </p>
+            <div class="project_link">
+              <a href="#">site</a>
+              <a href="#">review</a>
+            </div>
           </div>
         </div>
       </div>
@@ -82,6 +86,10 @@
               <span>#javascript</span>
               <span>#jQuery</span>
             </p>
+            <div class="project_link">
+              <a href="#">site</a>
+              <a href="#">review</a>
+            </div>
           </div>
         </div>
       </div>
@@ -97,6 +105,10 @@
               <span>#javascript</span>
               <span>#jQuery</span>
             </p>
+            <div class="project_link">
+              <a href="#">site</a>
+              <a href="#">review</a>
+            </div>
           </div>
         </div>
       </div>
@@ -146,11 +158,18 @@
         </a>
       </div>
     </section>
-    <section class="contact_sec">
+    <section class="contact_sec ani y_Bottom delay05">
       <div class="contact_wrap">
         <div class="contact_title">
           <h2>CONTACT</h2>
-          <p>함께 일할 사람을 찾고 계신가요?</p>
+          <h3>사용자의 시선을 정확히 포착하는 퍼블리셔</h3>
+          <p>
+            HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다.<br>마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
+          </p>
+        </div>
+        <div class="contact_icon">
+          <a href=""></a>
+          <a href=""></a>
         </div>
       </div>
     </section>
