--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jeongwoo's Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="assets/images/ui/port_logo.svg">
 </head>
 <body>
   <header>
@@ -29,6 +30,7 @@
       </div>
       <div class="nav">
         <ul class="util_menu">
+          <li><a href="#">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">PORTFOLIO</a></li>
           <li><a href="#">CONTACT</a></li>
@@ -116,7 +118,7 @@
     <section class="list_sec">
       <div class="list_wrap">
         <div class="list_title">
-          <h2>PROJECT</h2>
+          <h2>PORTFOLIO</h2>
         </div>
         <a href="#" class="list">
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
@@ -158,11 +160,11 @@
         </a>
       </div>
     </section>
-    <section class="contact_sec ani y_Bottom delay05">
+    <section class="contact_sec">
       <div class="contact_wrap">
         <div class="contact_title">
           <h2>CONTACT</h2>
-          <h3>사용자의 시선을 정확히 포착하는 퍼블리셔</h3>
+          <h3>parkjeongwoo@gmail.com</h3>
           <p>
             HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다.<br>마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
           </p>
