--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
       <div class="header_logo">
         <h2>PARK JEONG WOO</h2>
       </div>
+      <div class="nav">
+        <ul class="util_menu">
+          <li><a href="#main_sec">HOME</a></li>
+          <li><a href="#about_sec">ABOUT</a></li>
+          <li><a href="#project_sec">PORTFOLIO</a></li>
+          <li><a href="#contact_sec">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
   </header>
   <main>
-    <section class="main_sec">
+    <section id="main_sec">
       <div class="main_text">
         <div class="text">
           <span>FRAMED</span>
@@ -28,14 +36,6 @@
           <span>CODE</span>
         </div>
       </div>
-      <div class="nav">
-        <ul class="util_menu">
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">PORTFOLIO</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </div>
       <div class="lense">
           <div class="tl"></div>
           <div class="tr"></div>
@@ -46,9 +46,9 @@
         <div id="clock">time</div>
       </div>
     </section>
-    <section class="about_sec ani y_Bottom delay05">
+    <section id="about_sec">
       <div class="about_wrap">
-        <div class="about_title">
+        <div class="about_title ani y_Bottom">
           <h2>ABOUT</h2>
           <h3>사용자의 시선을 정확히 포착하는 퍼블리셔</h3>
           <p>
@@ -57,7 +57,7 @@
         </div>
       </div>
     </section>
-    <section class="project_sec">
+    <section id="project_sec">
       <div class="sec project01">
         <div class="project_box">
           <video src="assets/images/index/ops_media.mp4" autoplay="autoplay" muted="muted" loop></video>
@@ -115,7 +115,7 @@
         </div>
       </div>
     </section>
-    <section class="list_sec">
+    <section id="list_sec">
       <div class="list_wrap">
         <div class="list_title">
           <h2>PORTFOLIO</h2>
@@ -160,26 +160,26 @@
         </a>
       </div>
     </section>
-    <section class="contact_sec">
+    <section id="contact_sec">
       <div class="contact_wrap">
         <div class="contact_title">
           <h2>CONTACT</h2>
-          <h3>parkjeongwoo@gmail.com</h3>
+          <h3>Lorem</h3>
           <p>
             HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다.<br>마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
           </p>
         </div>
         <div class="contact_icon">
-          <a href=""></a>
-          <a href=""></a>
+          <a href="#"></a>
+          <a href="#"></a>
         </div>
       </div>
     </section>
   </main>
   <footer>
-    <section class="footer_sec">
-      
-    </section>
+    <!-- <section class="footer_sec">
+      <h2>&copy;parkjeongwoo's portfolio</h2>
+    </section> -->
   </footer>
   <script src="assets/js/jquery-3.7.1.min.js"></script>
   <script src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
