--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </header>
   <main>
     <section id="main_sec">
+      <video src="assets/images/index/main.mp4" autoplay="autoplay" muted="muted" loop></video>
       <div class="main_text">
         <div class="text">
           <span>FRAMED</span>
@@ -89,8 +90,8 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="#">site</a>
-              <a href="#">review</a>
+              <a href="havehad.netlify.app">site</a>
+              <a href="https://www.notion.so/Havehad-22af6e310078804fb264d06cc3bf9ac8?source=copy_link">review</a>
             </div>
           </div>
         </div>
@@ -102,6 +103,7 @@
             <h2>MMCA</h2>
             <p>
               <span>#반응형</span>
+              <span>#팀프로젝트</span>
               <span>#HTML</span>
               <span>#CSS</span>
               <span>#javascript</span>
@@ -109,7 +111,7 @@
             </p>
             <div class="project_link">
               <a href="#">site</a>
-              <a href="#">review</a>
+              <a href="https://www.notion.so/22af6e31007880a59368fcf0025940c5?source=copy_link">review</a>
             </div>
           </div>
         </div>
@@ -164,9 +166,27 @@
       <div class="contact_wrap">
         <div class="contact_title">
           <h2>CONTACT</h2>
-          <h3>Lorem</h3>
-          <p>
-            HTML/CSS부터 반응형, JavaScript까지 탄탄한 기초 위에, 깔끔한 코드와 완성도 높은 구조로 사용성과 접근성을 모두 고려합니다.<br>마치 정확한 초점과 구도로 한 장의 사진을 완성하듯, 작은 픽셀 하나에도 책임을 다하는 웹 퍼블리셔가 되겠습니다.
+          <p class="email ani y_Bottom">
+            <span>s</span>
+            <span>j</span>
+            <span>r</span>
+            <span>0</span>
+            <span>6</span>
+            <span>2</span>
+            <span>5</span>
+            <span>@</span>
+            <span>n</span>
+            <span>a</span>
+            <span>v</span>
+            <span>e</span>
+            <span>r</span>
+            <span>.</span>
+            <span>c</span>
+            <span>o</span>
+            <span>m</span>
+          </p>
+          <p class="ani y_Bottom delay03">
+            웹 퍼블리싱 관련 문의, 프로젝트 협업 제안, 또는 기타 궁금한 사항이 있으시면 아래 이메일을 통해 연락 주시기 바랍니다.<br /> 귀하의 소중한 의견에 신속하고 정확하게 답변드리겠습니다.
           </p>
         </div>
         <div class="contact_icon">
