--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="#">site</a>
-              <a href="#">review</a>
+              <a href="https://opsbakery2.netlify.app/">site</a>
+              <a href="https://www.notion.so/OPS-22af6e3100788024bb57f1bab335ba62?source=copy_link">review</a>
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="list_title">
           <h2>PORTFOLIO</h2>
         </div>
-        <a href="#" class="list">
+        <a href="https://www.notion.so/moneffe-22af6e31007880d3b667fe90b4b372b2?source=copy_link" class="list">
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
           <h3>moneffe</h3>
           <p class="tag">
@@ -131,7 +131,7 @@
             <span>#CSS</span>
           </p>
         </a>
-        <a href="#" class="list">
+        <a href="https://www.notion.so/22af6e31007880f3845cd0c47fbe3579?source=copy_link" class="list">
           <img class="fade" src="assets/images/index/siff_logo.png" alt="서울독립영화제">
           <h3>서울 독립 영화제</h3>
           <p class="tag">
