--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section id="about_sec">
       <div class="about_wrap">
-        <div class="about_title ani y_Bottom">
+        <div class="about_title ani y_Bottom delay03">
           <h2>ABOUT</h2>
           <h3>사용자의 시선을 정확히 포착하는 퍼블리셔</h3>
           <p>
@@ -186,20 +186,13 @@
             <span>m</span>
           </p>
           <p class="ani y_Bottom delay03">
-            웹 퍼블리싱 관련 문의, 프로젝트 협업 제안, 또는 기타 궁금한 사항이 있으시면 아래 이메일을 통해 연락 주시기 바랍니다.<br /> 귀하의 소중한 의견에 신속하고 정확하게 답변드리겠습니다.
+            웹 퍼블리싱 관련 문의, 프로젝트 협업 제안, 또는 기타 궁금한 사항이 있으시면 아래 이메일을 통해 연락 주시기 바랍니다.<br />소중한 의견에 신속하고 정확하게 답변드리겠습니다.
           </p>
-        </div>
-        <div class="contact_icon">
-          <a href="#"></a>
-          <a href="#"></a>
         </div>
       </div>
     </section>
   </main>
   <footer>
-    <!-- <section class="footer_sec">
-      <h2>&copy;parkjeongwoo's portfolio</h2>
-    </section> -->
   </footer>
   <script src="assets/js/jquery-3.7.1.min.js"></script>
   <script src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
