--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@
           </div>
         </div>
       </div>
+      <div class="sec project04">
+        <div class="project_box">
+          <video src="assets/images/index/kakao_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <div class="project_title">
+            <h2>kakao<b>pay</b></h2>
+            <p>
+              <span>#반응형</span>
+              <span>#원페이지</span>
+              <span>#HTML</span>
+              <span>#CSS</span>
+              <span>#javascript</span>
+              <span>#jQuery</span>
+            </p>
+            <div class="project_link">
+              <a href="#">site</a>
+              <a href="https://www.notion.so/22af6e31007880a59368fcf0025940c5?source=copy_link">review</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="list_sec">
       <div class="list_wrap">
