--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="#">site</a>
+              <a href="https://jkakaopay.netlify.app/">site</a>
               <a href="https://www.notion.so/22af6e31007880a59368fcf0025940c5?source=copy_link">review</a>
             </div>
           </div>
