top 위치값 변경

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <span>m</span>
           </p>
           <p class="ani y_Bottom delay03">
-            웹 퍼블리싱 관련 문의, 프로젝트 협업 제안, 또는 기타 궁금한 사항이 있으시면 아래 이메일을 통해 연락 주시기 바랍니다.<br />소중한 의견에 신속하고 정확하게 답변드리겠습니다.
+            웹 퍼블리싱 관련 문의, 프로젝트 협업 제안, 또는 기타 궁금한 사항이 있으시면 이메일을 통해 연락 주시기 바랍니다.<br />소중한 의견에 신속하고 정확하게 답변드리겠습니다.
           </p>
         </div>
       </div>
